Fix hidden redaction overlay due to overlapping with redaction box
- Fix a bug that caused redaction overlay to be behind other redaction boxes when there's overlapping between them.

--- a/src/main/resources/static/css/redact.css
+++ b/src/main/resources/static/css/redact.css
@@ -228,3 +228,7 @@ html {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+.active-redaction {
+  z-index: 30 !important;
+}
